test/files/invalid/file_identifier_twice.fbs
file_identifier "FOO1";
file_identifier "FOO2";