test/files/invalid/file_identifier_twice.stderr
error: Cannot set file_identifier twice
  ┌─ test/files/invalid/file_identifier_twice.fbs:2:1
  │
1 │ file_identifier "FOO1";
  │ ----------------------- first declaration was here
2 │ file_identifier "FOO2";
  │ ^^^^^^^^^^^^^^^^^^^^^^^ additional declaration was here

